improve rule-02, add rule-01

--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import enum\n",
     "from collections import namedtuple\n",
     "\n",
+    "import pattern.en as en\n",
     "from pycorenlp import StanfordCoreNLP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -215,6 +217,133 @@
     "        st -= 1\n",
     "    return 0, sent_counter"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def join_tokens(sent, offset=1):\n",
+    "    output_tokens = []\n",
+    "    for token in [t[\"word\"] for t in sent[\"tokens\"][(offset - 1):]]:\n",
+    "        if token not in {\".\", \",\", \"?\", \"!\", \";\", \":\"}:\n",
+    "            output_tokens.append(\" \")\n",
+    "        output_tokens.append(token)\n",
+    "    if len(output_tokens) > 0 and output_tokens[0] == \" \":\n",
+    "        output_tokens = output_tokens[1:]\n",
+    "    return \"\".join(output_tokens)           \n",
+    "\n",
+    "\n",
+    "def remove_leading_words(text, verbose=False):\n",
+    "    result = nlp.annotate(\n",
+    "        text,\n",
+    "        properties={\n",
+    "           'annotators': 'parse',\n",
+    "           'outputFormat': 'json',\n",
+    "           'timeout': 60000,\n",
+    "        }\n",
+    "    )\n",
+    "    \n",
+    "    if len(result[\"sentences\"]) == 0:\n",
+    "        return None\n",
+    "    else:\n",
+    "        sent = result[\"sentences\"][0]\n",
+    "        constituencies = read_constituencies(sent[\"parse\"])\n",
+    "        np_constituencies = [c for c in constituencies if c.tag == \"NP\"]\n",
+    "        if len(np_constituencies) == 0:\n",
+    "            return None\n",
+    "        else:\n",
+    "            first_np_constituency = sorted(np_constituencies, key=lambda c: c.startIndex)[0]\n",
+    "            new_text = \" \".join(\n",
+    "                [join_tokens(sent, first_np_constituency.startIndex)]\n",
+    "                + [join_tokens(s) for s in result[\"sentences\"][1:]]\n",
+    "            )\n",
+    "            if verbose:\n",
+    "                print(\n",
+    "                    \"Removed tokens before the first NP: \\n\"\n",
+    "                    f\"{text} \\n---> \\n{new_text}\"\n",
+    "                )\n",
+    "            return new_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalise_verb(verb):\n",
+    "    return en.conjugate(\n",
+    "        verb, \n",
+    "        tense = en.PRESENT,        # INFINITIVE, PRESENT, PAST, FUTURE\n",
+    "        person = 1,              # 1, 2, 3 or None\n",
+    "        number = en.SINGULAR,       # SG, PL\n",
+    "        mood = en.INDICATIVE,     # INDICATIVE, IMPERATIVE, CONDITIONAL, SUBJUNCTIVE\n",
+    "        negated = False,          # True or False\n",
+    "        parse = True\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def is_plural(word):\n",
+    "    if word == en.singularize(word):\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "    \n",
+    "\n",
+    "class Tense(enum.Enum):\n",
+    "    PRESENT = 0\n",
+    "    PAST = 1\n",
+    "\n",
+    "    \n",
+    "class Number(enum.Enum):\n",
+    "    SINGULAR = 0\n",
+    "    PLURAL = 1\n",
+    "    \n",
+    "    \n",
+    "def conjugate(verb, tense=Tense.PAST, person=1, number=Number.SINGULAR):\n",
+    "    if tense == Tense.PRESENT:\n",
+    "        en_tense = en.PRESENT\n",
+    "    elif tense == Tense.PAST:\n",
+    "        en_tense = en.PAST\n",
+    "    else:\n",
+    "        assert False\n",
+    "        \n",
+    "    if number == Number.SINGULAR:\n",
+    "        en_number = en.SINGULAR\n",
+    "    elif number == Number.PLURAL:\n",
+    "        en_number = en.PLURAL\n",
+    "    else: \n",
+    "        assert False\n",
+    "        \n",
+    "    return en.conjugate(verb, tense=en_tense, person=person, number=en_number)\n",
+    "\n",
+    "\n",
+    "def find_first_verb(text):\n",
+    "    for i, (_, pos_tag) in enumerate(en.tag(text)):\n",
+    "        if pos_tag[:1] == 'V':\n",
+    "            return i\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "def find_first_adjective(text):\n",
+    "    for i, (_, pos_tag) in enumerate(en.tag(text)):\n",
+    "        if pos_tag == 'JJ':\n",
+    "            return i\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
