return extra info

--- a/utils.ipynb
+++ b/utils.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "import enum\n",
     "import collections\n",
     "import re"
    ]
@@ -303,6 +304,12 @@
     ")\n",
     "\n",
     "\n",
+    "@enum.unique\n",
+    "class NucleusProximity(enum.Enum):\n",
+    "    NEAR = \"near\"\n",
+    "    FAR = \"far\"\n",
+    "    \n",
+    "    \n",
     "class RelationInfo:\n",
     "    def __init__(self, nucleus_info, satellite_info):\n",
     "        self.nucleus_info = nucleus_info\n",
@@ -359,15 +366,15 @@
     "    if satellite_info.relation.left.type == \"N\":\n",
     "        print_if_verbose(\"Satellite's nucleus is on the left.\", verbose)\n",
     "        if nucleus_info.direction == \"right\": # if the expl. nucleus is on the left\n",
-    "            nucleus_proximity = \"near\"\n",
+    "            nucleus_proximity = NucleusProximity.NEAR\n",
     "        else:\n",
-    "            nucleus_proximity = \"far\"\n",
+    "            nucleus_proximity = NucleusProximity.FAR\n",
     "    else:\n",
     "        print_if_verbose(\"Satellite's nucleus is on the right.\", verbose)\n",
     "        if nucleus_info.direction == \"right\":\n",
-    "            nucleus_proximity = \"far\"\n",
+    "            nucleus_proximity = NucleusProximity.FAR\n",
     "        else:\n",
-    "            nucleus_proximity = \"near\"\n",
+    "            nucleus_proximity = NucleusProximity.NEAR\n",
     "    print_if_verbose(f\"Nuclei proximity is {nucleus_proximity}\", verbose)\n",
     "\n",
     "    # if there are nested relations in the satellite nucleus\n",
