separate statement generation from rules

--- a/defs.ipynb
+++ b/defs.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import abc\n",
@@ -22,7 +24,7 @@
     "Statement = collections.namedtuple(\n",
     "    \"Statement\",\n",
     "    [\n",
-    "        \"text\",\n",
+    "        \"statement_text\",\n",
     "        \"nucleus\",\n",
     "        \"satellite_nucleus\",\n",
     "        \"left_boundary\",\n",
@@ -67,6 +69,11 @@
     "    \n",
     "    @property\n",
     "    @abc.abstractmethod\n",
+    "    def relation_type(self):\n",
+    "        pass\n",
+    "    \n",
+    "    @property\n",
+    "    @abc.abstractmethod\n",
     "    def reasons(self):\n",
     "        pass\n",
     "    \n",
@@ -78,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A template\n",
