--- a/utils.ipynb
+++ b/utils.ipynb
@@ -339,6 +339,7 @@
     "\n",
     "\n",
     "def extract_nuclei(\n",
+    "    text,\n",
     "    relation_info,\n",
     "    satellite_nucleus_relation,\n",
     "    satellite_nucleus_segment,\n",
@@ -461,7 +462,7 @@
     "            return SatelliteNucleusCheckResult(False, satellite_nucleus_text)\n",
     "    \n",
     "    \n",
-    "def prepare_extended_info(relation, verbose=False):\n",
+    "def prepare_extended_info(text, relation, verbose=False):\n",
     "    rel_info = get_info(relation, verbose)\n",
     "    \n",
     "    if rel_info.satellite_info.relation is None:\n",
@@ -475,6 +476,7 @@
     "        return None\n",
     "        \n",
     "    nucleus_text, satellite_nucleus_text, nucleus_proximity = extract_nuclei(\n",
+    "        text,\n",
     "        rel_info,\n",
     "        sn_relation,\n",
     "        sn_segment,\n",
