--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -263,7 +263,7 @@
     "            )\n",
     "            if verbose:\n",
     "                print(\n",
-    "                    \"Removed tokens before the first NP: \\n\"\n",
+    "                    \"Removing tokens before the first NP: \\n\"\n",
     "                    f\"{text} \\n---> \\n{new_text}\"\n",
     "                )\n",
     "            return new_text"
@@ -272,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def normalise_verb(verb):\n",
