--- a/project/explanation_01.ipynb
+++ b/project/explanation_01.ipynb
@@ -33,25 +33,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing Jupyter notebook from utils.ipynb\n",
-      "importing Jupyter notebook from nlp.ipynb\n",
-      "importing Jupyter notebook from relation_extraction.ipynb\n",
-      "importing Jupyter notebook from defs.ipynb\n"
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/utils.ipynb\n",
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/nlp.ipynb\n",
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/relation_extraction.ipynb\n",
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n"
      ]
     }
    ],
    "source": [
     "import import_ipynb\n",
-    "import utils\n",
-    "import nlp\n",
-    "import relation_extraction\n",
-    "import defs"
+    "from aux import utils\n",
+    "from aux import nlp\n",
+    "from aux import relation_extraction\n",
+    "from aux import defs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def do_subjects_differ(text, rel, n_prev_sent=5):\n",
@@ -108,7 +110,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ItMakesParseResult = collections.namedtuple(\n",
@@ -231,8 +235,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class RuleExplanation01(defs.Rule):\n",
@@ -355,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -374,14 +380,14 @@
       "It makes me feel great to do something for the environment .  \n",
       "ItMakesParseResult(success=True, subject='I', verb='feel', rest='great to do something for the environment .')\n",
       "Satellite's nucleus starts with 'It makes/made'.\n",
-      "Removed tokens before the first NP: \n",
+      "Removing tokens before the first NP: \n",
       "I feel great to do something for the environment. \n",
       "---> \n",
       "I feel great to do something for the environment.\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"text\": \"I'm often there for three hours because I feel great to do something for the environment.\",\n",
+      "  \"statement_text\": \"I'm often there for three hours because I feel great to do something for the environment.\",\n",
       "  \"nucleus\": \"I'm often there for three hours\",\n",
       "  \"satellite_nucleus\": \"I feel great to do something for the environment.\",\n",
       "  \"left_boundary\": 1007,\n",
@@ -400,7 +406,7 @@
     "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
     "    rule = RuleExplanation01()\n",
     "\n",
-    "    with open(\"parsed/race/train/middle/8123.txt.tree\", \"rt\") as f:\n",
+    "    with open(\"../parsed/race/train/middle/8123.txt.tree\", \"rt\") as f:\n",
     "        tree_text = f.read()\n",
     "\n",
     "    text, relations = relation_extraction.read_relations(\n",
