--- a/project/aux/relation_extraction.ipynb
+++ b/project/aux/relation_extraction.ipynb
@@ -287,7 +287,7 @@
     "    with open(file_path, \"rt\") as f:\n",
     "        tree_text = f.read()\n",
     "\n",
-    "    return read_relations(tree_text)"
+    "    return read_relations(tree_text.replace(\"<s>\", \"\").replace(\"<P>\", \"\"))"
    ]
   },
   {
