--- a/project/aux/utils.ipynb
+++ b/project/aux/utils.ipynb
@@ -41,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clean_re = re.compile(\"\\s+([.,?!'])\")\n",
@@ -103,7 +105,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Testing\n",
@@ -169,7 +173,7 @@
    },
    "outputs": [],
    "source": [
-    "with open(\"connectives.txt\", \"rt\") as f:\n",
+    "with open(\"aux/connectives.txt\", \"rt\") as f:\n",
     "    connectives = set(\n",
     "        [line.strip() for line in f.readlines()]\n",
     "    )"
@@ -296,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "RelationPartInfo = collections.namedtuple(\n",
