add explanation rule no. 3

--- a/project/aux/nlp.ipynb
+++ b/project/aux/nlp.ipynb
@@ -220,6 +220,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def find_subject(text, st, end):\n",
+    "    new_st, sent_no = move_st(text, st, 5)\n",
+    "    resolved_subjects = get_resolved_subjects(text[new_st:end])\n",
+    "    if len(resolved_subjects) > 0:\n",
+    "        return resolved_subjects[-1]\n",
+    "    else:\n",
+    "        return None\n",
+    "    \n",
+    "    \n",
+    "def test__find_subject():\n",
+    "    assert find_subject(\n",
+    "               \"Sam likes pizza. So he eats it frequently.\",\n",
+    "               17, \n",
+    "               42\n",
+    "           )\n",
+    "    assert find_subject(\n",
+    "               \"Sam likes pizza. So he eats it frequently.\",\n",
+    "               0, \n",
+    "               17\n",
+    "           )\n",
+    "\n",
+    "    \n",
+    "test__find_subject()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true
