--- a/project/aux/utils.ipynb
+++ b/project/aux/utils.ipynb
@@ -532,12 +532,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def remove_extra_space(s):\n",
+    "    return \" \".join(s.split())\n",
+    "\n",
+    "\n",
+    "def contains_any_of(s, s_array):\n",
+    "    for other_s in s_array:\n",
+    "        if other_s in s:\n",
+    "            return True\n",
+    "    return False"
+   ]
   }
  ],
  "metadata": {
