--- a/project/explanation_01.ipynb
+++ b/project/explanation_01.ipynb
@@ -64,7 +64,7 @@
     "        set(word_tokenize(text[rel.left.start:rel.right.end])))) > 0:\n",
     "        right_segment_sent_no = left_segment_sent_no + 1\n",
     "    else:\n",
-    "        right_segPment_sent_no = left_segment_sent_no\n",
+    "        right_segment_sent_no = left_segment_sent_no\n",
     "\n",
     "    if left_segment_sent_no == right_segment_sent_no:\n",
     "        return True\n",
