common subject check

--- a/project/aux/nlp.ipynb
+++ b/project/aux/nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 115,
    "metadata": {
     "collapsed": true
    },
@@ -11,13 +11,17 @@
     "import enum\n",
     "from collections import namedtuple\n",
     "\n",
+    "import pandas as pd\n",
+    "\n",
     "import pattern.en as en\n",
-    "from pycorenlp import StanfordCoreNLP"
+    "from pycorenlp import StanfordCoreNLP\n",
+    "\n",
+    "import nltk.tokenize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -96,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -148,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -185,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -201,12 +205,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# include previous sentences to do the coref resolution\n",
     "def move_st(text, st, n_prev_sentences):\n",
     "    sent_counter = 0\n",
     "    while st > 0:\n",
@@ -220,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -240,12 +245,12 @@
     "               \"Sam likes pizza. So he eats it frequently.\",\n",
     "               17, \n",
     "               42\n",
-    "           )\n",
+    "           ) == \"Sam\"\n",
     "    assert find_subject(\n",
     "               \"Sam likes pizza. So he eats it frequently.\",\n",
     "               0, \n",
     "               17\n",
-    "           )\n",
+    "           ) == \"Sam\"\n",
     "\n",
     "    \n",
     "test__find_subject()"
@@ -253,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -295,10 +300,9 @@
     "                + [join_tokens(s) for s in result[\"sentences\"][1:]]\n",
     "            )\n",
     "            if verbose:\n",
-    "                print(\n",
-    "                    \"Removing tokens before the first NP: \\n\"\n",
-    "                    f\"{text} \\n---> \\n{new_text}\"\n",
-    "                )\n",
+    "                print(\"Removing tokens before the first NP:\")\n",
+    "                print(\"-- syntactic parsing result\\n\", sent[\"parse\"])\n",
+    "                print(f\"{text} \\n---> \\n{new_text}\")\n",
     "            return new_text"
    ]
   },
@@ -373,12 +377,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def print_parse_trees(text):\n",
+    "    result = nlp.annotate(\n",
+    "        text,\n",
+    "        properties={\n",
+    "           'annotators': 'parse',\n",
+    "           'outputFormat': 'json',\n",
+    "           'timeout': 60000,\n",
+    "        }\n",
+    "    )\n",
+    "    \n",
+    "    for i, sentence in enumerate(result[\"sentences\"]):\n",
+    "        print(f\"SENTENCE no. {i}:\\n\")\n",
+    "        print(sentence[\"parse\"])\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -- Code for checking if the verbs of the parts of a relation belong to the same subject\n",
+    "\n",
+    "def print_if_verbose(text, verbose):\n",
+    "    if verbose:\n",
+    "        print(text)\n",
+    "\n",
+    "\n",
+    "def make_constituencies_df(constituencies):\n",
+    "    return pd.DataFrame(\n",
+    "        [(c.tag, c.startIndex - 1, c.endIndex - 1, c.depth) for c in constituencies],\n",
+    "        columns=[\"type\", \"start\", \"end\", \"depth\"]\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def count_tokens(text, st, end):\n",
+    "    return len(\n",
+    "        nltk.tokenize.word_tokenize(text[st:end])\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def find_boundaries(text, left_st, left_end, right_st, right_end, verbose=False):\n",
+    "    sentence_st, _ = move_st(text, left_st, 0)\n",
+    "    print_if_verbose(f\"Sentence starts at {sentence_st}.\", verbose)\n",
+    "    \n",
+    "    first_left_token_no = count_tokens(text, sentence_st, left_st)  \n",
+    "    last_left_token_no  = (\n",
+    "        first_left_token_no + count_tokens(text, left_st, left_end)\n",
+    "    )\n",
+    "    first_right_token_no = (\n",
+    "        last_left_token_no + count_tokens(text, left_end, right_st)\n",
+    "    )\n",
+    "    last_right_token_no = (\n",
+    "        first_right_token_no + count_tokens(text, right_st, right_end)\n",
+    "    )\n",
+    "    return first_left_token_no, last_left_token_no, first_right_token_no, last_right_token_no\n",
+    "\n",
+    "\n",
+    "def get_vps_in_boundaries(constituencies_df, left_boundary, right_boundary):\n",
+    "    return constituencies_df.loc[\n",
+    "        (constituencies_df.type == \"VP\")\n",
+    "            & (\n",
+    "                (constituencies_df.start >= left_boundary)\n",
+    "                    & (constituencies_df.end <= right_boundary)\n",
+    "            )\n",
+    "    ]\n",
+    "\n",
+    "\n",
+    "def find_vp_boundaries(constituencies_df, left_boundary, right_boundary):\n",
+    "    vp_df = get_vps_in_boundaries(constituencies_df, left_boundary, right_boundary) \n",
+    "    if len(vp_df) == 0:\n",
+    "        return None\n",
+    "    else:\n",
+    "        min_depth = vp_df.depth.min()\n",
+    "        vp = vp_df.loc[vp_df.depth == min_depth].iloc[0]\n",
+    "        return vp.start, vp.end\n",
+    "\n",
+    "    \n",
+    "def find_umbrella_vps(constituencies_df, left_vp_boundaries, right_vp_boundaries):\n",
+    "    return constituencies_df.loc[\n",
+    "        (constituencies_df.type == \"VP\")\n",
+    "            & (\n",
+    "                (constituencies_df.start <= left_vp_boundaries[0])\n",
+    "                    & (constituencies_df.end >= right_vp_boundaries[1])\n",
+    "            )\n",
+    "    ]\n",
+    "\n",
+    "\n",
+    "def belong_to_one_vp(text, left_st, left_end, right_st, right_end, verbose=False):\n",
+    "    st, _ = move_st(text, left_st, 0)\n",
+    "    result = nlp.annotate(\n",
+    "        text[st:],\n",
+    "        properties={\n",
+    "           'annotators': 'parse',\n",
+    "           'outputFormat': 'json',\n",
+    "           'timeout': 60000,\n",
+    "        }\n",
+    "    )\n",
+    "    if (\n",
+    "        \"sentences\" not in result \n",
+    "            or len(result[\"sentences\"]) == 0 \n",
+    "            or \"parse\" not in result[\"sentences\"][0]\n",
+    "    ):\n",
+    "        print_if_verbose(\"Failed to parse the sentence.\", verbose)\n",
+    "        return False\n",
+    "    else:\n",
+    "        print_if_verbose(f\"Parsing result:\\n{result['sentences'][0]['parse']}\\n\", verbose)\n",
+    "            \n",
+    "    constituencies_df = make_constituencies_df(\n",
+    "        read_constituencies(result[\"sentences\"][0][\"parse\"])\n",
+    "    )\n",
+    "    print_if_verbose(f\"Constituencies:\\n{constituencies_df}\\n\", verbose)\n",
+    "        \n",
+    "    boundaries = find_boundaries(\n",
+    "        text, left_st, left_end, right_st, right_end, verbose\n",
+    "    )\n",
+    "    print_if_verbose(f\"Boundaries: {boundaries}\", verbose)\n",
+    "        \n",
+    "    left_vp_boundaries = find_vp_boundaries(\n",
+    "        constituencies_df, boundaries[0], boundaries[1]\n",
+    "    )\n",
+    "    if left_vp_boundaries is None:\n",
+    "        print_if_verbose(\"Didn't find the left VP.\", verbose)\n",
+    "        return False\n",
+    "    \n",
+    "    right_vp_boundaries = find_vp_boundaries(\n",
+    "        constituencies_df, boundaries[2], boundaries[3]\n",
+    "    )\n",
+    "    if right_vp_boundaries is None:\n",
+    "        print_if_verbose(\"Didn't find the right VP.\", verbose)\n",
+    "        return False\n",
+    "    print_if_verbose(\n",
+    "        f\"Left and right VP boundaries: {left_vp_boundaries}, {right_vp_boundaries}\", verbose\n",
+    "    )\n",
+    "        \n",
+    "    umbrella_vps = find_umbrella_vps(\n",
+    "        constituencies_df, left_vp_boundaries, right_vp_boundaries\n",
+    "    )\n",
+    "    print_if_verbose(f\"Umbrella VPs:\\n{umbrella_vps}\", verbose)\n",
+    "              \n",
+    "    return len(umbrella_vps) > 0\n",
+    "\n",
+    "\n",
+    "def test__belong_to_one_vp():\n",
+    "    text = (\n",
+    "        \"I saw Beijing and climbed the Great Wall. \"\n",
+    "        \"This is our last chance to swim in the ocean and enjoy the warm weather.\"\n",
+    "    )\n",
+    "\n",
+    "    assert belong_to_one_vp(\n",
+    "        text, \n",
+    "        text.index(\"I\"),\n",
+    "        text.index(\"Beijing\") + 1,\n",
+    "        text.index(\"and\"),\n",
+    "        text.index(\"Wall\") + 1,\n",
+    "        False\n",
+    "    ) == True\n",
+    "\n",
+    "    assert belong_to_one_vp(\n",
+    "        text, \n",
+    "        text.index(\"to\"),\n",
+    "        text.index(\"ocean\") + 1,\n",
+    "        text.index(\"ocean\") + 1,\n",
+    "        text.index(\"weather\") + 1,\n",
+    "        False\n",
+    "    ) == True\n",
+    "\n",
+    "    assert belong_to_one_vp(\n",
+    "        text, \n",
+    "        text.index(\"I\"),\n",
+    "        text.index(\"Beijing\") + 1,\n",
+    "        text.index(\"This\"),\n",
+    "        text.index(\"weather\") + 1,\n",
+    "        False\n",
+    "    ) == False\n",
+    "    \n",
+    "    \n",
+    "test__belong_to_one_vp()"
+   ]
   }
  ],
  "metadata": {
